refactored templates and vars in userCOntroller
